﻿			     BZFlag Release Notes
			     ====================

BZFlag 2.0.3
------------

* Players without TALK can send to the Admin group - Sean Morrison
* Fixed bzfs crash because poll kick/ban - Julio Jimenez
* Allow additional group modify permission lines - Frank Evers
* bzfs creates default groups before parsing groupdb file - Frank Evers
* +ALL and -ALL adds/removes all perms froma a group in groupdb - Frank Evers
* Support for +,- and ! operators in bzfs' groupdb file - Frank Evers

BZFlag 2.0.2  "Queen of Maybe" (2005-03-18)
-------------------------------------------

* Added TALK, MUTE, UNMUTE permissions - Angelina Carlton
* Added /mute, /unmute commands - Angelina Carlton
* bzadmin does not require opengl headers - Alfredo Tupone
* bzfs handle both -mp specification - Alfredo Tupone
* bzfs correctly handles ban time - Alfredo Tupone, Julio Jimenez
* bzfs no more put jittered players as Not Responding - Alfredo Tupone
* bzfs stop shot from dead player - Alfredo Tupone
* Roaming switching between player goes even on Dead Player - Alfredo Tupone
* Fixed bzfs crash associated to "Error adding player" - Alfredo Tupone
* bzflag count a single -1 score for a tk (like server does) - Alfredo Tupone
* Fixes on hostban handling - Alfredo Tupone
* Fixed force feedback on Windows - Scott Wichser
* New Kick/Ban options using slot numbers (rendered in client) - Julio Jimenez
* Added EndShot cheat detection - Julio Jimenez
* Avoid spawning on top of tanks with SR or BU -  Daniel Remenak
* Add fine-grained permissions control of polling - Daniel Remenak
* Fixed loading of colormapped PNGs - Daniel Remenak
* Add SPAWN permission, remove -requireidentify - Steve Krenzel, Tim Riker
* A /say command for server messages - Julio Jimenez, Frank Evers
* Rejoin permission for avoiding _rejoinTime limit - Frank Evers, Julio Jimenez
* A player will auto ghost if they use global authentication - Steve Krenzel
* Server announces who started a countdown - Angelina Carlton